--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack --config build/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,25 @@
   "bugs": {
     "url": "https://github.com/yufan-zhao/yufan-zhao.github.io/issues"
   },
-  "homepage": "https://github.com/yufan-zhao/yufan-zhao.github.io#readme"
+  "homepage": "https://github.com/yufan-zhao/yufan-zhao.github.io#readme",
+  "devDependencies": {
+    "bootstrap": "^4.0.0",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.9",
+    "exports-loader": "^0.7.0",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
+    "less-loader": "^4.0.5",
+    "popper.js": "^1.12.9",
+    "style-loader": "^0.20.2",
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "^4.1.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.5"
+  }
 }
