--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
+    "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "popper.js": "^1.12.9",
     "style-loader": "^0.20.2",
     "vue": "^2.5.13",
+    "vue-loader": "^14.1.1",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.13",
+    "vuex": "^3.0.1",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
