--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --open --config build/webpack.dev.js",
     "build-dev": "webpack --config build/webpack.dev.js"
   },
   "repository": {
